# AI-Researcher-Fundamentals

./: README.md  main.py  pyproject.toml
notebooks/01_linear_models/: 2_Polynomial_Features_Overfitting.ipynb
